# web-research-agent-main

./: Examples.md  README.md  pyproject.toml  requirements.txt
notes/: issues.md
src/web_research_agent/: research_agent.py
web-research-agent-main/: Examples.md  README.md  archive.txt  fields.md  full_test_list.md  output.json  research_agent.py  restaurants.csv
