[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "harry_hctg_voyago_web_research_agent" 
version = "1.0"
authors = [{ name = "Harry", email = "fengyuan6666@gmail.com" }]
description = "CLI research agent for restaurant web research"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "openai>=1.3.0",
  "requests>=2.31.0",
  "google-search-results>=2.4.2"
]

[project.scripts]
restaurant-rag = "web_research_agent.research_agent:_cli"

[tool.setuptools.packages.find]
where = ["src"]